filehtml: unpack the author and date from document metadata

--- a/content/assets/style.css
+++ b/content/assets/style.css
@@ -145,6 +145,11 @@ dd {
 	padding: 0 1.25rem;
 }
 
+.container .meta {
+	font-style: italic;
+	margin: 1.25rem;
+}
+
 .footer {
 	text-align: center;
 	color: #666;
