--- a/templates/html.tmpl
+++ b/templates/html.tmpl
@@ -25,6 +25,11 @@
 		<div class="page">
 			<div class="container">
 				<h1>{{.Title}}</h1>
+				<div class="meta">
+					{{.Author}}
+					<br />
+					{{.Date}}
+				</div>
 				{{.Body}}
 			</div>
 			<!-- .container -->
