all: implement search functionality
The search function is available through internal API "/_internal/search"
with single parameter "q" that contains one or more words to search.

--- a/content/assets/style.css
+++ b/content/assets/style.css
@@ -133,6 +133,9 @@ dd {
 	border: 0.0625rem solid #375eab;
 	border-radius: 5px;
 }
+.topbar .menu form {
+	margin-left: 0.625rem;
+}
 .page {
 	width: 100%;
 }
