all: rename the "content" directory to "_example"
While at it, also move the templates into _example and all assets
into the same directory.

--- a/_example/html.tmpl
+++ b/_example/html.tmpl
@@ -6,7 +6,7 @@
 		<meta name="theme-color" content="#375EAB" />
 
 		<title>{{.Title}}</title>
-		<link rel="stylesheet" href="/assets/style.css" />
+		<link rel="stylesheet" href="/index.css" />
 		{{- range .Styles}}
 		<link rel="stylesheet" href="{{.}}" />
 		{{- end}}
@@ -43,10 +43,11 @@
 		<!-- .page -->
 
 		<div class="footer">
-			Copyright 2019, Shulhan &lt;ms@kilabit.info&gt;. All rights reserved.
-			<br />
-			Use of this source code is governed by a BSD-style license that can be
-			found in the <a href="/LICENSE">LICENSE</a> file.
+			Powered by <a
+				href="https://github.com/shuLhan/ciigo"
+			>
+				ciigo
+			</a>
 		</div>
 	</body>
 </html>
