all: migrate the repo and Go module to git.sr.ht/~shulhan/ciigo

--- a/_example/html.tmpl
+++ b/_example/html.tmpl
@@ -44,7 +44,7 @@
 
 		<div class="footer">
 			Powered by <a
-				href="https://github.com/shuLhan/ciigo"
+				href="https://sr.ht/~shulhan/ciigo"
 			>
 				ciigo
 			</a>
