--- a/_example/index.css
+++ b/_example/index.css
@@ -1,3 +1,6 @@
+// SPDX-FileCopyrightText: 2020 Shulhan <ms@kilabit.info>
+// SPDX-License-Identifier: GPL-3.0-or-later
+
 body {
 	margin: 0;
 	font-family: Arial, sans-serif;
