--- a/testdata/html.tmpl
+++ b/testdata/html.tmpl
@@ -1,3 +1,7 @@
+<!--
+// SPDX-FileCopyrightText: 2021 Shulhan <ms@kilabit.info>
+// SPDX-License-Identifier: GPL-3.0-or-later
+--!>
 <!DOCTYPE>
 <html>
 <head><title>{{.Title}}</title></head>
