--- a/_example/custom.css
+++ b/_example/custom.css
@@ -1,5 +1,7 @@
-// SPDX-FileCopyrightText: 2020 Shulhan <ms@kilabit.info>
-// SPDX-License-Identifier: GPL-3.0-or-later
+/**
+ * SPDX-FileCopyrightText: 2020 Shulhan <ms@kilabit.info>
+ * SPDX-License-Identifier: GPL-3.0-or-later
+ */
 
 h1 {
 	color: sienna;
